Bug 464550 - opus chaptered audiobook once hits 24 hours resets time
Summary: opus chaptered audiobook once hits 24 hours resets time
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.2
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-20 13:47 UTC by linux
Modified: 2023-01-21 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description linux 2023-01-20 13:47:18 UTC
SUMMARY
loops audio time settings every 24 hours in audio file

STEPS TO REPRODUCE
1. playing any opus chaptered audiobook over 24 hours will reset time to 00:00 numerous times
2. shows in chapter list and also on progress bar


OBSERVED RESULT
22:53:34 - 53-04-25 (053) The Soldier 
23:22:36 - 53-05-02 (054) Tacetta
23:53:04 - 53-05-09 (055) The Buffalo Hunter
00:22:56 - 53-05-16 (056) The Big Con 
00:52:50 - 53-05-23 (057) Print Asper 
01:22:34 - 53-05-30 (058) Fall Semester 
01:52:30 - 53-06-06 (059) Sundown
02:22:31 - 53-06-13 (060) Spring Term


EXPECTED RESULT
22:53:34 - 53-04-25 (053) The Soldier 
23:22:36 - 53-05-02 (054) Tacetta
23:53:04 - 53-05-09 (055) The Buffalo Hunter
24:22:56 - 53-05-16 (056) The Big Con 
24:52:50 - 53-05-23 (057) Print Asper 
25:22:34 - 53-05-30 (058) Fall Semester 
25:52:30 - 53-06-06 (059) Sundown
26:22:31 - 53-06-13 (060) Spring Term

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Mint 21.1
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Comment 1 george fb 2023-01-21 00:45:27 UTC
Git commit ff716ecf8b098e3ea79f7c385185856ace77d559 by George Florea Bănuș.
Committed on 21/01/2023 at 00:44.
Pushed by georgefb into branch 'master'.

Application::formatTime: add support for more than 24 hours

M  +8    -3    src/application.cpp

https://invent.kde.org/multimedia/haruna/commit/ff716ecf8b098e3ea79f7c385185856ace77d559