Application::formatTime: add support for more than 24 hours

BUG: 464550